--- a/index.html
+++ b/index.html
@@ -6,9 +6,22 @@
       <title>React App</title>
    </head>
 
+   <style>
+    #app {}
+    section {
+     width: 65%;
+     margin:0 auto;
+    }
+   </style>
    <body>
+      
+     <section>
       <div id = "app"></div>
+      <div id = "smsForm"></div>
+     </section>
+
       <script src = "index.js"></script>
+
    </body>
 
 </html>
