style to external file

--- a/index.html
+++ b/index.html
@@ -3,24 +3,17 @@
 
    <head>
       <meta charset = "UTF-8">
-      <title>React App</title>
+      <title>LM</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
    </head>
-
-   <style>
-    #app {}
-    section {
-     width: 65%;
-     margin:0 auto;
-    }
-   </style>
    <body>
       
      <section>
-      <div id = "app"></div>
-      <div id = "smsForm"></div>
+      <div id= "app"></div>
+      <div id= "smsForm"></div>
      </section>
 
-      <script src = "index.js"></script>
+      <script src= "index.js"></script>
 
    </body>
 
