general cleanup styles + webpack

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 
    <head>
       <meta charset = "UTF-8">
-      <title>LM</title>
+      <title>LovMinder</title>
       <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
       
      <section>
-      <div id= "app"></div>
-      <div id= "smsForm"></div>
+      <div id="app"></div>
+      <div id="smsForm"></div>
      </section>
 
-      <script src= "index.js"></script>
+      <script src="index.js"></script>
 
    </body>
 
