--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
        <section>
         <div id="app"></div>
         <div id="smsForm"></div>
+        <div id="sandbox"></div>
        </section>
-      
+
       </div>
 
       <script src="index.js"></script>
