quick cleanup to setup test pipeline

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
 
  </head>
    <body>
-      
      <div class="container">
-      
+      <h1>The Landing Page</h1>      
       <header id="topHeader"></header>
 
        <section>
@@ -26,9 +25,7 @@
        </section>
 
       </div>
-
       <script src="index.js"></script>
 
    </body>
-
 </html>
